[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/OptionsMenu/options_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainMenu/Fonts/main_menu_start_button.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainMenu/Fonts/main_menu_game_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MainMenu/Styles/start_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/MainMenu/Styles/start_button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/PauseMenu/pause_menu.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 6 )
menu_container_fade_duration = 0.25
menu_container_slide_duration = 0.25
container_tween_delay = 0.125

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0666667, 0.133333, 0.937255 )

[node name="PauseMenuContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Name" type="Label" parent="PauseMenuContainer"]
anchor_right = 1.0
margin_top = 83.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -71.0
margin_right = 83.0
margin_bottom = 71.0
custom_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 165.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
text = "Resume"

[node name="OptionsButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 165.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
text = "Options"

[node name="OptionsMenuContainer" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="back_button_pressed" from="OptionsMenuContainer" to="." method="_on_back_button_pressed"]
